projects/ui/src/themes/default/card.scss
@import '../variables';

ard-card,
.ard-card {
  position: relative;
  background: $bg;
  box-sizing: border-box;
  width: 100%;
  height: max-content;
  display: block;

  //! appearances
  &.ard-appearance-outlined {
    border: 1px solid $border-light;
  }
  &.ard-appearance-raised {
    box-shadow: $card-shadow;
  }
  //! variants
  &.ard-variant-sharp {
    border-radius: 0;
  }
  &.ard-variant-rounded {
    border-radius: 8px;
  }
}
//! header
ard-card-header {
  padding: 0.5em 1em 0 1em;
  display: flex;
  align-items: center;
  margin-bottom: 1em;

  .ard-card-header-title-container {
    display: flex;
    flex-direction: column;
    justify-content: center;
  }

  &:first-child {
    padding-top: 1em;
  }
}
.ard-card-title,
.ard-card-subtitle {
  line-height: normal;
  display: block;
  margin: 0;
  font-weight: 500;
}
.ard-card-title {
  font-size: 1.375em;
  letter-spacing: 0.0125em;
  color: $text;
}
.ard-card-subtitle {
  font-size: 1em;
  letter-spacing: 0.0078125em;
  color: $text3;
  margin-top: 0.125rem;
}
.ard-card-avatar {
  display: block;
  width: 3em;
  height: 3em;
  border-radius: 9999px;
  flex-shrink: 0;
  object-fit: cover;

  ~ .ard-card-header-title-container {
    padding: 0 1em;
  }
}
//! image
.ard-card-image {
  position: relative;
  box-sizing: border-box;
  background-repeat: no-repeat;
  background-position: center;
  background-size: cover;
  max-width: 100%;

  &:first-child {
    border-top-left-radius: inherit;
    border-top-right-radius: inherit;
  }
  &:last-child {
    border-bottom-left-radius: inherit;
    border-bottom-right-radius: inherit;
  }
}
//! content
.ard-card-content {
  padding: 0 1em;
  display: block;

  &:first-child {
    padding-top: 1em;
  }
  &:last-child {
    padding-bottom: 1em;
  }

  > :last-child {
    margin-bottom: 0;
  }
}
//! action buttons
.ard-card-action-buttons {
  padding: 0.5em;
  display: flex;
  flex-direction: row;
  align-items: center;

  &.ard-align-left {
    justify-content: flex-start;
  }
  &.ard-align-middle {
    justify-content: center;
  }
  &.ard-align-right {
    justify-content: flex-end;
  }
}
//! footer
//no styling needed

